[package]
name = "error-code-derive"
version = "0.1.0"
edition = "2021"
[lib]
proc-macro = true
[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.86"
syn = { version = "2.0.57", features = ["extra-traits"] }
quote = "1.0.37"
anyhow = {workspace = true}
thiserror={workspace = true}
http={ workspace = true}
